# ZephyrOS

./: CMakeLists.txt  west.yml
app/: CMakeLists.txt  Kconfig  prj.conf
app/explorer/: CMakeLists.txt  Kconfig  prj.conf
app/explorer/boards/: stm32f4_atk_explorer.overlay
app/explorer/src/events/: CMakeLists.txt
app/explorer/src/modules/: Kconfig.can_module  Kconfig.flash_module  can_module.c  eeprom_module.c  flash_module.c  socket_can_module.c
app/src/: main.c
app/src/events/: Kconfig  util_module_event.c
app/src/modules/: Kconfig.flash_module  flash_module.c  util_module.c
app/src/watchdog/: watchdog_app.c
app/warship/: CMakeLists.txt
boards/st/stm32f1_atk_warship/: stm32f1_atk_warship.dts
boards/st/stm32f4-atk-explorer/: stm32f4_atk_explorer.dts  stm32f4_atk_explorer.yaml  stm32f4_atk_explorer_defconfig
boards/st/stm32f4_atk_explorer/: Kconfig.defconfig  Kconfig.stm32f4_atk_explorer  board.yml  stm32f4_atk_explorer.dts  stm32f4_atk_explorer_defconfig
dts/bindings/: vendor-prefixes.txt
dts/bindings/sensor/: cfsensor,example-sensor.yaml
samples/basic/mailbox/: mailboxs.c
subsys/: CMakeLists.txt  Kconfig
